--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               </div>
               <div class="logo-2">
                 <a href="https://picktraff.club/?t9tnh=c11766d43d15461628d94&z2jquvpcog=moneytimeproo.now.sh&a5mtxyjw=vercel">
-                  <img src="https://b.radikal.ru/b10/2012/69/762d6eb7eb42.png" class="logo">
+                  <img src="https://d.radikal.ru/d07/2101/25/60fcfbc3b4b5.png" class="logo">
               </div>
             </div>
 
