--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <td valign="top">
                   <div class="comment-col-1">
                     <div class="profile-photo">
-                      <img src="files/us2.jpg">
+                      <img src="https://a.radikal.ru/a40/2101/9e/47528718c203.jpg">
                     </div>
                   </div>
                 </td>
